; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_adc_gpio_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_adc_gpio_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ADC_UNIT_1 = common dso_local global i32 0, align 4
@ADC1_CHANNEL_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"ADC1 channel error\00", align 1
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@GPIO_FLOATING = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adc_gpio_init(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @ADC_CHECK_UNIT(i32 %6)
  store i32 0, i32* %5, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @ADC_UNIT_1, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %35

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @ADC1_CHANNEL_MAX, align 8
  %15 = icmp slt i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %18 = call i32 @RTC_MODULE_CHECK(i32 %16, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @adc1_pad_get_io_num(i64 %19, i32* %5)
  %21 = call i32 @ADC1_CHECK_FUNCTION_RET(i32 %20)
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @rtc_gpio_init(i32 %22)
  %24 = call i32 @ADC1_CHECK_FUNCTION_RET(i32 %23)
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @rtc_gpio_output_disable(i32 %25)
  %27 = call i32 @ADC1_CHECK_FUNCTION_RET(i32 %26)
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @rtc_gpio_input_disable(i32 %28)
  %30 = call i32 @ADC1_CHECK_FUNCTION_RET(i32 %29)
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* @GPIO_FLOATING, align 4
  %33 = call i32 @gpio_set_pull_mode(i32 %31, i32 %32)
  %34 = call i32 @ADC1_CHECK_FUNCTION_RET(i32 %33)
  br label %35

35:                                               ; preds = %12, %2
  %36 = load i32, i32* @ESP_OK, align 4
  ret i32 %36
}

declare dso_local i32 @ADC_CHECK_UNIT(i32) #1

declare dso_local i32 @RTC_MODULE_CHECK(i32, i8*, i32) #1

declare dso_local i32 @ADC1_CHECK_FUNCTION_RET(i32) #1

declare dso_local i32 @adc1_pad_get_io_num(i64, i32*) #1

declare dso_local i32 @rtc_gpio_init(i32) #1

declare dso_local i32 @rtc_gpio_output_disable(i32) #1

declare dso_local i32 @rtc_gpio_input_disable(i32) #1

declare dso_local i32 @gpio_set_pull_mode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
